@@ -4688,8 +4688,11 @@ appendString(NSMutableData *m, NSUInteger offset, NSUInteger fold,
       NSArray   *a;
 
       a = [[value lowercaseString] componentsSeparatedByString: @"/"];
-      [self setObject: [a objectAtIndex: 0] forKey: @"Type"];
-      [self setObject: [a objectAtIndex: 1] forKey: @"Subtype"];
+      if ([a count] == 2)
+        {
+          [self setObject: [a objectAtIndex: 0] forKey: @"Type"];
+          [self setObject: [a objectAtIndex: 1] forKey: @"Subtype"];
+        }
     }
 }
 
